examples/errors/other/E0400_argument_count_mismatch.hd
fn add(x: int, y: int): int {
    return x + y;
}

fn main(): void {
    let result = add(5);
    return;
}
